added select net opponent dialog