@@ -5,12 +5,7 @@ rem uncomment the line below if graphics works slowly
 set JAVA_EXTRA_GFX_FLAGS="-Dsun.java2d.opengl=true"
 rem set JAVA_EXTRA_GFX_FLAGS="-Dcom.sun.management.jmxremote=true -Dsun.java2d.opengl=true"
 
-rem set JAVA_EXTRA_GFX_FLAGS="-Dcom.sun.management.jmxremote=true -Dsun.java2d.opengl=true"
-
-rem Comment line below if JAVA 1.8
-set JAVA_FLAGS="--add-opens=java.base/java.lang=ALL-UNNAMED"
-
-set JAVA_RUN="java.exe"
+set JAVA_RUN="jre/bin/java.exe"
 
 echo %%JAVA_RUN%%=%JAVA_RUN% > %LOG_FILE%
 
